--- a/index.html
+++ b/index.html
@@ -5,12 +5,40 @@ header {
 width: 100%; 
 margin: auto; 
 display: block; 
-color: #222222;
-padding-top: -30px; 
+background-color: #222222;
+padding-top: -1000px; 
+height: 160px;
+padding-left; -50px; 
+padding-right: -50px; 
 }
-header img { 
+/* header img { 
 width: 100%; 
 margin:auto; 
+} */ 
+nav { 
+width: 100%; 
+display: block; 
+margin: auto; 
+}
+/*nav img { 
+width: 100%;
+margin: auto; 
+}*/
+.logo { 
+width: 30%; 
+margin: auto; 
+padding-top: 40px; 
+display: block; 
+} 
+.urban { 
+width: 15%; 
+margin-right: 5px; 
+margin-top: 20px; 
+font-family: Arial, sans-serif; 
+color: #ffffff; 
+font-size: 12px;
+text-decoration: none; 
+float: right; 
 }
 .container { 
 width: 100%; 
@@ -67,8 +95,10 @@ display: block;
 </style> 
 </head>
 <body>
-<header>
-<img src="UO Create Web-09.png" /> </header> 
+<header> <nav> <a class="urban" href="urbanoutfitters.com"> URBANOUTFITTERS.COM </a> 
+<img class="logo" src="UO Create Web-03.png" /> 
+ </nav> 
+<!-- <img src="UO Create Web-09.png" /> --> </header> 
 <div class"container">
 <img class="artists" src="UO Create Web-10.png"/> 
 <img class="step1" src="UO Create Web-11.png" />
