--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ margin: auto;
 display: block; 
 background-color: #222222;
 padding-top: -1000px; 
-height: 160px;
+height: 400px;
 padding-left; -50px; 
 padding-right: -50px; 
 }
@@ -25,7 +25,7 @@ width: 100%;
 margin: auto; 
 }*/
 .logo { 
-width: 30%; 
+width: 60%; 
 margin: auto; 
 padding-top: 40px; 
 display: block; 
@@ -47,6 +47,21 @@ display: block;
 background-color: #ffffff;
 padding-top: -10px;
 }
+#introparagraph { 
+width: 50%; 
+margin: auto; 
+display: block; 
+padding-top: 50px;
+}
+#introparagraph p { 
+font-family: Courier, serif; 
+font-size: 15px; 
+text-align: center; 
+width: 100%; 
+margin: auto; 
+color: #ffffff;
+padding-top: 40px;
+} 
 .artists {
 width: 100%; 
 margin: auto; 
@@ -96,8 +111,10 @@ display: block;
 </head>
 <body>
 <header> <nav> <a class="urban" href="urbanoutfitters.com"> URBANOUTFITTERS.COM </a> 
-<img class="logo" src="UO Create Web-03.png" /> 
  </nav> 
+ <div id="introparagraph"> <img class="logo" src="UO Create Web-03.png" /> <p> UO Create Together is a collaboration celebrating the diversity of local communities surrounding our Urban Outfitters stores, taking 
+place in 20 cities across the country. We are aiming to bring a local artist and local band together with their community for a one time experiential concert, 
+taking place in your local UO store. With the ability to listen to great music, create your own customized merchandise from the band and artist, and be able to manipulate the creative space around you - you won't want to miss this!</p>  </div> 
 <!-- <img src="UO Create Web-09.png" /> --> </header> 
 <div class"container">
 <img class="artists" src="UO Create Web-10.png"/> 
