--- a/index.html
+++ b/index.html
@@ -62,33 +62,65 @@ margin: auto;
 color: #ffffff;
 padding-top: 40px;
 } 
+.music { 
+width: 100%; 
+padding-top: -3px; 
+padding-left: -100px; 
+padding-right: -100px; 
+margin: auto; 
+display: block; 
+} 
+.music img { 
+width: 100%; 
+height: 271px; 
+margin: auto;
+} 
 .artists {
 width: 100%; 
 margin: auto; 
 display: block;
+padding-top: 50px; 
 }
 .step1 { 
-width: 90%; 
+width: 80%; 
 margin: auto; 
 display: block; 
 }
-.step2 { 
-width: 90%; 
+.linktype { 
+width: 100%; 
 margin: auto; 
 display: block; 
+padding-bottom: 60px;
+}
+.linktype p { 
+font-family: Courier, serif; 
+font-size: 16px; 
+color: #aaaaaa; 
+text-align: center; 
+} 
+.linktype a { 
+color: #aaaaaa; 
+} 
+.step2 { 
+width: 80%; 
+margin: auto; 
+display: block; 
+padding-top: 40px; 
 } 
 .step3 { 
-width: 90%; 
+width: 80%; 
 margin: auto; 
 display: block;
+padding-top: 40px;
 }
 .step4 { 
-width: 90%; 
+width: 80%; 
 margin: auto; 
 display: block; 
+padding-top: 40px; 
 }
 .step5 { 
-width: 90%; 
+width: 80%; 
 margin: auto; 
 display: block; 
 }
@@ -102,10 +134,49 @@ width: 90%;
 margin: auto; 
 display: block; 
 }
+#collabcities { 
+width: 100%; 
+margin: auto; 
+display: block; 
+padding-top: 90px;
+} 
+/*#wrapper { 
+width: 80%;
+margin: auto; 
+display: block; 
+}*/ 
+h3 { 
+font-family: Francois One, Regular, sans-serif; 
+font-size: 18px; 
+color: #222222;
+width: 80%; 
+margin: auto;
+text-align: center; 
+} 
+#firsthalf { 
+font-family: Courier, serif; 
+font-size: 14px; 
+color: #aaaaaa;
+width: 30%; 
+display: inline; 
+float: left;
+line-height: 30px; 
+padding-left: 350px; 
+} 
+#secondhalf { 
+font-family: Courier, serif; 
+font-size: 14px; 
+color: #aaaaaa;
+width: 30%; 
+display: inline;
+float: left;
+line-height: 30px; 
+} 
 footer img { 
 width: 100%; 
 margin: auto; 
 display: block; 
+padding-top: 150px;
 }
 </style> 
 </head>
@@ -117,14 +188,49 @@ place in 20 cities across the country. We are aiming to bring a local artist and
 taking place in your local UO store. With the ability to listen to great music, create your own customized merchandise from the band and artist, and be able to manipulate the creative space around you - you won't want to miss this!</p>  </div> 
 <!-- <img src="UO Create Web-09.png" /> --> </header> 
 <div class"container">
+<div class="music" ><img src="UO Create Web-18.png" /> </div> 
 <img class="artists" src="UO Create Web-10.png"/> 
 <img class="step1" src="UO Create Web-11.png" />
+<div class="linktype"> <p> (or just <a href="#collabcities"> Click Here.</a> ) </p></div>
 <img class="step2" src="UO Create Web-12.png" /> 
 <img class="step3" src="UO Create Web-13.png" /> 
 <img class="step4" src="UO Create Web-14.png" /> 
 <img class="step5" src="UO Create Web-15.png" /> 
 <img class="wannacome" src="UO Create Web-16.png" /> 
-<a href="statebefore.html"> <img class="collab" src="UO Create Web-17.png" /> </a>  
+<div id="collabcities">
+<h3> Select Your City to View the Collab </h3>  
+<div id="#wrapper"> 
+<section id="firsthalf"> <ul> 
+<li> Austin </li> 
+<li> Baltimore </li> 
+<li> Boston </li> 
+<li> Chicago </li> 
+<li> Columbus </li> 
+<li> Dallas </li> 
+<li> Detroit </li> 
+<li> District of Columbia </li> 
+<li> Denver </li> 
+<li> Indianapolis </li> 
+</ul> 
+</section> 
+<section id="secondhalf"> 
+<ul> 
+<li> Los Angelos </li> 
+<li> Madison </li> 
+<li> Milwaukee </li> 
+<li> Minneapolis </li> 
+<li> New York City </li> 
+<li> Portland </li> 
+<li> Philadelphia </li> 
+<li> Phoenix </li> 
+<li> San Diego </li> 
+<li> Seattle </li> 
+</ul> 
+</div>
+ </div> 
+
+
+<!-- <a href="statebefore.html"> <img class="collab" src="UO Create Web-17.png" /> </a> --> 
 <footer> <img src="UO Create Web-08.png" /></footer> 
 
 
