added in the rest of the text

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ height: 400px;
 padding-left; -50px; 
 padding-right: -50px; 
 }
+
 /* header img { 
 width: 100%; 
 margin:auto; 
@@ -81,6 +82,14 @@ margin: auto;
 display: block;
 padding-top: 50px; 
 }
+.howitworks { 
+width: 100%; 
+margin: auto; 
+display: block; 
+padding-top: 60px;
+padding-bottom: 30px; 
+} 
+
 .step1 { 
 width: 80%; 
 margin: auto; 
@@ -124,11 +133,70 @@ width: 80%;
 margin: auto; 
 display: block; 
 }
+#wannacometext { 
+width: 100%; 
+margin: auto; 
+display: block; 
+padding-top: 90px;
+}
+#wannacometext p { 
+font-family: Courier, serif; 
+font-size: 12px; 
+text-align: center; 
+color: #222222; 
+} 
 .wannacome { 
 width: 90%; 
 margin: auto; 
 display: block;
 }
+#nextthree { 
+width: 85%; 
+margin: auto; 
+display: block; 
+padding-top: 5px
+}
+.cityname { 
+width: 28%; 
+display: inline-block; 
+float: left; 
+margin-left: 20px;
+}
+.citynamea { 
+width: 30%; 
+display: inline-block; 
+float: left; 
+margin-left: 45px;
+}
+.citynameb { 
+width: 28%; 
+display: inline-block; 
+float: left; 
+margin-left: 28px;
+}
+h4 { 
+font-size:17px; 
+font-family: ZIG ZAG, Not Rounded, sans-serif; 
+color: #222222; 
+} 
+.cityname p{ 
+font-family: Akkurat, sans-serif; 
+font-size: 11px; 
+color: #222222; 
+line-height: 12px;
+} 
+.citynamea p{ 
+font-family: Akkurat, sans-serif; 
+font-size: 11px; 
+color: #222222; 
+line-height: 12px;
+} 
+.citynameb p{ 
+font-family: Akkurat, sans-serif; 
+font-size: 11px; 
+color: #222222; 
+line-height: 12px;
+} 
 .collab { 
 width: 90%; 
 margin: auto; 
@@ -138,7 +206,7 @@ display: block;
 width: 100%; 
 margin: auto; 
 display: block; 
-padding-top: 90px;
+padding-top: 200px;
 } 
 /*#wrapper { 
 width: 80%;
@@ -147,11 +215,12 @@ display: block;
 }*/ 
 h3 { 
 font-family: Francois One, Regular, sans-serif; 
-font-size: 18px; 
+font-size: 22px; 
 color: #222222;
 width: 80%; 
 margin: auto;
 text-align: center; 
+display: block; 
 } 
 #firsthalf { 
 font-family: Courier, serif; 
@@ -190,13 +259,40 @@ taking place in your local UO store. With the ability to listen to great music, 
 <div class"container">
 <div class="music" ><img src="UO Create Web-18.png" /> </div> 
 <img class="artists" src="UO Create Web-10.png"/> 
+<div class="howitworks" > <h3> How It Works: </h3> </div> 
 <img class="step1" src="UO Create Web-11.png" />
 <div class="linktype"> <p> (or just <a href="#collabcities"> Click Here.</a> ) </p></div>
 <img class="step2" src="UO Create Web-12.png" /> 
 <img class="step3" src="UO Create Web-13.png" /> 
 <img class="step4" src="UO Create Web-14.png" /> 
 <img class="step5" src="UO Create Web-15.png" /> 
+<div id="wannacometext"> <h3> Wanna Come? </h3> 
+<p> Here are the next three cities we'll be hitting: </p> 
+</div> 
 <img class="wannacome" src="UO Create Web-16.png" /> 
+<section id="nextthree"> 
+<article class="cityname">
+<h4> PHILADELPHIA </h4> 
+<p> U. Penn </p> 
+<p> 110 South 36th Street, Philadelphia, PA 19104-3211</p> 
+<p> August 8, 2017 </p> 
+</article> 
+
+<article class="citynamea">
+<h4> MINNEAPOLIS </h4> 
+<p> Mall of America</p> 
+<p> 122 W. Market, Mall of America W-122A Bloomington, MN 55425-5521 </p> 
+<p> August 11, 2017 </p>
+</article> 
+
+<article class="citynameb">
+<h4> CHICAGO</h4> 
+<p> North State Street </p> 
+<p> 1100 North State Street, Chicago, IL 60610-1422</p> 
+<p> August 18, 2017 </p>
+</article> 
+
+</section> 
 <div id="collabcities">
 <h3> Select Your City to View the Collab </h3>  
 <div id="#wrapper"> 
