switched fonts and added web kit

--- a/index.html
+++ b/index.html
@@ -180,19 +180,19 @@ font-family: ZIG ZAG, Not Rounded, sans-serif;
 color: #222222; 
 } 
 .cityname p{ 
-font-family: Akkurat, sans-serif; 
+font-family: Courier, sans-serif; 
 font-size: 11px; 
 color: #222222; 
 line-height: 12px;
 } 
 .citynamea p{ 
-font-family: Akkurat, sans-serif; 
+font-family: Courier, sans-serif; 
 font-size: 11px; 
 color: #222222; 
 line-height: 12px;
 } 
 .citynameb p{ 
-font-family: Akkurat, sans-serif; 
+font-family: Courier, serif; 
 font-size: 11px; 
 color: #222222; 
 line-height: 12px;
@@ -240,6 +240,9 @@ width: 30%;
 display: inline;
 float: left;
 line-height: 30px; 
+} 
+li a { 
+color: #aaaaaa; 
 } 
 footer img { 
 width: 100%; 
@@ -297,30 +300,30 @@ taking place in your local UO store. With the ability to listen to great music, 
 <h3> Select Your City to View the Collab </h3>  
 <div id="#wrapper"> 
 <section id="firsthalf"> <ul> 
-<li> Austin </li> 
-<li> Baltimore </li> 
-<li> Boston </li> 
-<li> Chicago </li> 
-<li> Columbus </li> 
-<li> Dallas </li> 
-<li> Detroit </li> 
-<li> District of Columbia </li> 
-<li> Denver </li> 
-<li> Indianapolis </li> 
+<li> <a href=" "> Austin </a> </li> 
+<li> <a href=" "> Baltimore </a>  </li> 
+<li> <a href=" "> Boston </a>  </li> 
+<li> <a href=" "> Chicago </a> </li> 
+<li> <a href=" "> Columbus </a> </li> 
+<li> <a href=" "> Dallas </a> </li> 
+<li> <a href=" "> Detroit</a>  </li> 
+<li> <a href=" "> District of Columbia</a>  </li> 
+<li> <a href=" "> Denver </a>  </li> 
+<li> <a href=" "> Indianapolis </a> </li> 
 </ul> 
 </section> 
 <section id="secondhalf"> 
 <ul> 
-<li> Los Angelos </li> 
-<li> Madison </li> 
-<li> Milwaukee </li> 
-<li> Minneapolis </li> 
-<li> New York City </li> 
-<li> Portland </li> 
-<li> Philadelphia </li> 
-<li> Phoenix </li> 
-<li> San Diego </li> 
-<li> Seattle </li> 
+<li> <a href=" "> Los Angelos </a> </li> 
+<li> <a href=" ">Madison </a> </li> 
+<li> <a href=" "> Milwaukee </a> </li> 
+<li> <a href="mnbefore.html"> Minneapolis </a> </li> 
+<li> <a href=" ">New York City </a></li> 
+<li> <a href=" "> Portland <a/></li> 
+<li> <a href=" "> Philadelphia</a> </li> 
+<li> <a href=" "> Phoenix </a> </li> 
+<li> <a href=" ">San Diego </a> </li> 
+<li> <a href=" "> Seattle <a/></li> 
 </ul> 
 </div>
  </div> 
